# AvRecorder

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
src/: audio_capturer.h  av_capturer.cpp  av_capturer.h  av_encoder.h  av_muxer.h  av_recorder.cpp  av_recorder.h  basic.cpp  basic.h  dxgi_capturer.cpp  dxgi_capturer.h  gdi_capturer.cpp  main.cpp  mutex_queue.h  pix_transformer.h  timer.h  video_render.cpp  video_render.h  video_widget.cpp
src/basic/: basic.cpp  basic.h  frame.cpp  frame.h  timer.h
src/capturer/: audio_capturer.cpp  audio_capturer.h  buffer_filler.cpp  buffer_filler.h  dxgi_capturer.cpp  dxgi_capturer.h  finder.cpp  finder.h  gdi_capturer.cpp  gdi_capturer.h  video_capturer.cpp  video_capturer.h  wgc_capturer.cpp  wgc_capturer.h
src/capturer/d3d/: buffer_filler.cpp  buffer_filler.h  convert.cpp  convert.h  gen_frame.cpp  gen_frame.h
src/capturer/wgc/: App.cpp  App.h  SimpleCapture.cpp  SimpleCapture.h  capture.interop.h  pch.cpp  pch.h  winrt.cpp  winrt.h
src/d3d/: buffer_filler.cpp  buffer_filler.h  convert.cpp  convert.h  gen_frame.cpp  gen_frame.h
src/encoder/: abstract_encoder.cpp  abstract_encoder.h  audio_encoder.cpp  audio_encoder.h  audio_mixer.cpp  audio_mixer.h  video_encoder.cpp  video_encoder.h
src/muxer/: av_muxer.cpp  av_muxer.h
src/recorder/: audio_recorder.cpp  audio_recorder.h  video_recorder.cpp  video_recorder.h
src/ui/: audio_render.cpp  audio_render.h  audio_widget.cpp  audio_widget.h  av_recorder.cpp  av_recorder.h  settings_page.cpp  settings_page.h  video_render.cpp  video_render.h  video_widget.h
